zeta-code/tui/src/app/snapshots/zeta_tui__app__welcome__view_tests__welcome_pet_animation_frames.snap
---
source: zeta-code/tui/src/app/welcome_view_tests.rs
expression: frames
---
idle
................
................
..BB........BB..
....BB....BB....
..BBBBBBBBBBBB..
..BBBBBBBBBBBB..
BBBBBBBBBBBBBBBB
..BBBBBBBBBBBB..
................
................
................
................
................
................
................
................

press
................
..BB........BB..
....BB....BB....
..BBBBBBBBBBBB..
..BBKKBBBBKKBB..
BBBBKKBBBBKKBBBB
BBBBBBBBBBBBBBBB
..BBBBBBBBBBBB..
...BB......BB...
...BB......BB...
................
................
................
................
................
................

rise
..BB........BB..
..BB........BB..
....BB....BB....
..BBBBBBBBBBBB..
..BBKKBBBBKKBB..
BBBBKKBBBBKKBBBB
BBBBBBBBBBBBBBBB
..BBBBBBBBBBBB..
...BB......BB...
................
................
................
................
................
................
................

land
................
..BB........BB..
....BB....BB....
..BBBBBBBBBBBB..
..BBBBBBBBBBBB..
BBBBKKBBBBKKBBBB
BBBBBBBBBBBBBBBB
..BBBBBBBBBBBB..
...BB......BB...
...BB......BB...
................
................
................
................
................
................
