zeta-code/tui/src/app/snapshots/zeta_tui__app__welcome__view_tests__welcome_pet_identity_header.snap
---
source: zeta-code/tui/src/app/welcome_view_tests.rs
expression: rendered
---

    ▄  ▄     Zeta Code v0.1.0
  ▗█▛██▜█▖   openai-chatgpt/gpt-5.6 · Subscription
  ▝▜████▛▘   /work/zeta
    ▝  ▘
