zeta-code/tui/src/app/snapshots/zeta_tui__app__welcome__view_tests__welcome_pet_source_pixel_grid.snap
---
source: zeta-code/tui/src/app/welcome_view_tests.rs
assertion_line: 56
expression: pet_pixel_map()
---
..BBB........BBB..
....BBBBBBBBBB....
.BBBKKBBBBBBKKBBB.
.BBBKKBBBBBBKKBBB.
...BBBBBBBBBBBB...
....BB......BB....
