zeta-code/tui/src/app/snapshots/zeta_tui__app__welcome__view_tests__welcome_pet_terminal_cells.snap
---
source: zeta-code/tui/src/app/welcome_view_tests.rs
expression: "pet_cell_map(super::pet::sprite())"
---
symbols
..▄..▄..
▗█▛██▜█▖
▝▜████▛▘
..▝..▘..
foreground
..B..B..
BBBBBBBB
BBBBBBBB
..B..B..
background
........
.KKKKKK.
........
........
