zeta-code/tui/src/app/snapshots/zeta_tui__app__welcome__view_tests__welcome_pet_terminal_raster.snap
---
source: zeta-code/tui/src/app/welcome_view_tests.rs
expression: "pet_pixel_map(super::pet::sprite())"
---
................
................
..BB........BB..
....BB....BB....
..BBBBBBBBBBBB..
..BBBBBBBBBBBB..
BBBBBBBBBBBBBBBB
..BBBBBBBBBBBB..
................
................
................
................
................
................
................
................
